recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:14: error: not found: value c
    c
    ^